--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Jejeje
+    <title>Practicas
     </title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="main.css">
     <script src="main.js"></script>
 </head>
 <body>
-    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Exercitationem dignissimos aperiam amet itaque at nostrum cumque illum beatae corporis similique expedita reiciendis nam, dicta vitae officia inventore facilis. Cumque, voluptatem!</p>
+    <a href="./Web/estilos.html"> Matriz de Estilos de Texto </a>
 </body>
 </html>
