--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <script src="main.js"></script>
 </head>
 <body>
+    <p>Portafolio de evidencias de Víctor Eduardo Delgado Vázquez</p>
+    <p>15690435</p>
     <a href="./Web/estilos.html"> Matriz de Estilos de Texto </a>
 </body>
 </html>
