--- a/index.html
+++ b/index.html
@@ -3,15 +3,24 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Practicas
-    </title>
+    <title>Portafolio de evidencias</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="main.css">
     <script src="main.js"></script>
+    <style>
+        body{
+            background-size: auto;
+            background-image: url("./lossy-page1-1200px-NGC_2500_-_HST_-_Potw1728a.tif.jpg")       
+             }
+    </style>
 </head>
 <body>
+    <font size="6" color="White">
     <p>Portafolio de evidencias de Víctor Eduardo Delgado Vázquez</p>
     <p>15690435</p>
-    <a href="./Web/estilos.html"> Matriz de Estilos de Texto </a>
+    <p>Practicas</p>
+    <hr>
+    <a style="color:mediumaquamarine" href="./Web/estilos.html"> Practica1-Matriz de Estilos de Texto </a>
+    </font>
 </body>
 </html>
