--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <p>Practicas</p>
     <hr>
     <a style="color:mediumaquamarine" href="./Web/estilos.html"> Practica1-Matriz de Estilos de Texto </a>
+    <a style="color:mediumaquamarine" href="./Web/horario.html"> Practica3-Horario</a>
     </font>
 </body>
 </html>
