--- a/index.html
+++ b/index.html
@@ -20,8 +20,9 @@
     <p>15690435</p>
     <p>Practicas</p>
     <hr>
-    <a style="color:mediumaquamarine" href="./Web/estilos.html"> Practica1-Matriz de Estilos de Texto </a>
-    <a style="color:mediumaquamarine" href="./Web/horario.html"> Practica3-Horario</a>
+    <a style="color:mediumaquamarine" href="./Web/estilos.html"> Practica1-Matriz de Estilos de Texto </a> <br>
+    <a style="color:mediumaquamarine" href="./Web/cv.html">Practica2-CV</a> <br>
+    <a style="color:mediumaquamarine" href="./Web/horario.html"> Practica3-Horario</a> <br>
     </font>
 </body>
 </html>
